--- a/app/src/main/res/menu/bottom_sheet_menu.xml
+++ b/app/src/main/res/menu/bottom_sheet_menu.xml
@@ -4,16 +4,12 @@
     <item
         android:id="@+id/menu_news"
         android:icon="@drawable/ic_newspaper"
-        android:title="News"
+        android:title="@string/news"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/menu_bus"
-        android:icon="@drawable/ic_bus_front_grey"
-        android:title="Bus Route"
-        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/menu_event"
         android:icon="@drawable/ic_event"
-        android:title="Event"
+        android:title="@string/event"
         app:showAsAction="ifRoom" />
 </menu>
